--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:backgroundTint="@color/teal_700"
-            android:layout_margin="6dp"
+            android:layout_margin="@dimen/marginZButtona"
            />
 
         <Button
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:backgroundTint="@color/teal_200"
-            android:layout_margin="6dp"/>
+            android:layout_margin="@dimen/marginZButtona"/>
 
         <Button
             android:id="@+id/button3"
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:backgroundTint="@color/purple_700"
-            android:layout_margin="6dp" />
+            android:layout_margin="@dimen/marginZButtona" />
     </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -58,7 +58,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="@color/purple_200"
-                android:layout_margin="6dp" />
+                android:layout_margin="@dimen/marginZButtona" />
 
             <Button
                 android:id="@+id/button5"
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="#FFFFFF"
-                android:layout_margin="6dp" />
+                android:layout_margin="@dimen/marginZButtona" />
 
             <Button
                 android:id="@+id/button6"
@@ -74,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="#FF0000"
-                android:layout_margin="6dp" />
+                android:layout_margin="@dimen/marginZButtona" />
 
         </LinearLayout>
 
