--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:textSize="24sp"
         android:textAlignment="center"
         android:background="#74502191"
-        android:text="Wybierz kolory których nie ma na fladze polski!" />
+        android:text="@string/polecenie" />
 
     <LinearLayout
         android:layout_width="match_parent"
