--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
             android:layout_weight="1"
             android:backgroundTint="@color/teal_700"
             android:layout_margin="@dimen/marginZButtona"
+            android:onClick="ukryj"
            />
 
         <Button
@@ -37,7 +38,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:backgroundTint="@color/teal_200"
-            android:layout_margin="@dimen/marginZButtona"/>
+            android:layout_margin="@dimen/marginZButtona"
+            android:onClick="ukryj"/>
 
         <Button
             android:id="@+id/button3"
@@ -45,7 +47,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:backgroundTint="@color/purple_700"
-            android:layout_margin="@dimen/marginZButtona" />
+            android:layout_margin="@dimen/marginZButtona"
+            android:onClick="ukryj"/>
     </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -58,7 +61,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="@color/purple_200"
-                android:layout_margin="@dimen/marginZButtona" />
+                android:layout_margin="@dimen/marginZButtona"
+                android:onClick="ukryj"
+                />
 
             <Button
                 android:id="@+id/button5"
@@ -66,7 +71,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="#FFFFFF"
-                android:layout_margin="@dimen/marginZButtona" />
+                android:layout_margin="@dimen/marginZButtona"
+                android:onClick="dobry"/>
 
             <Button
                 android:id="@+id/button6"
@@ -74,7 +80,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="#FF0000"
-                android:layout_margin="@dimen/marginZButtona" />
+                android:layout_margin="@dimen/marginZButtona"
+                android:onClick="dobry"
+                />
 
         </LinearLayout>
 
